# assetCLI-init

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: localnet-test-cli.yml
docs/: todo.md
idls/: bonding_curve.json
programs/bonding-curve/: Anchor.toml
programs/bonding-curve/clients/: BondingCurveSimulator.ts
programs/bonding-curve/programs/bonding-curve/: Cargo.toml
programs/bonding-curve/programs/bonding-curve/src/: constants.rs  errors.rs  lib.rs
programs/bonding-curve/programs/bonding-curve/src/instructions/curve/: create_bonding_curve.rs  swap.rs
programs/bonding-curve/programs/bonding-curve/src/instructions/migrate/: claim_creator_lp.rs  create_raydium_pool.rs  harvest_locked_liquidity.rs  lock_cpmm_lp.rs  mod.rs
programs/bonding-curve/programs/bonding-curve/src/state/curve/: bonding_curve.rs  dao_proposal.rs  mod.rs
programs/bonding-curve/tests/: bonding-curve.ts
scripts/: local-dev.sh
src/: mcp-server.ts
src/commands/: bonding-curve.ts
src/mcp/: bonding-curve.ts  config-and-wallet.ts  dao.ts  multisig.ts  proposal.ts  test-token.ts
src/services/: bonding-curve-service.ts  config-service.ts  governance-service.ts  perana-service.ts
src/types/: bonding_curve.ts  index.ts
src/utils/: constants.ts  mcp-hooks.ts
